--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,92 @@
-pandas>=2.0.0
-numpy>=1.24.0
-openpyxl>=3.1.0
-dotenv
-fastmcp
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+authlib==1.6.1
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.7.14
+cffi==1.17.1
+charset-normalizer==3.4.2
+choreographer==1.0.10
+click==8.2.1
+cryptography==45.0.5
+cyclopts==3.22.3
+distro==1.9.0
+dnspython==2.7.0
+docstring-parser==0.17.0
+docutils==0.21.2
+dotenv==0.9.9
+email-validator==2.2.0
+et-xmlfile==2.0.0
+exceptiongroup==1.3.0
+fastapi==0.116.1
+fastmcp==2.10.6
+gitdb==4.0.12
+gitpython==3.1.45
+google-auth==2.40.3
+google-genai==1.27.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.1
+idna==3.10
+jinja2==3.1.6
+jiter==0.10.0
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+kaleido==1.0.0
+logistro==1.1.0
+markdown-it-py==3.0.0
+markupsafe==3.0.2
+mcp==1.12.1
+mdurl==0.1.2
+narwhals==2.1.2
+nest-asyncio==1.6.0
+numpy==2.2.6
+openai==1.100.2
+openapi-pydantic==0.5.1
+openpyxl==3.1.5
+orjson==3.11.2
+packaging==25.0
+pandas==2.3.1
+pillow==11.3.0
+plotly==6.3.0
+protobuf==6.32.0
+pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1-modules==0.4.2
+pycparser==2.22
+pydantic==2.11.7
+pydantic-core==2.33.2
+pydantic-settings==2.10.1
+pydeck==0.9.1
+pygments==2.19.2
+pyperclip==1.9.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-multipart==0.0.20
+pytz==2025.2
+referencing==0.36.2
+requests==2.32.4
+rich==14.0.0
+rich-rst==1.3.1
+rpds-py==0.26.0
+rsa==4.9.1
+simplejson==3.20.1
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+sse-starlette==2.4.1
+starlette==0.47.2
+streamlit==1.48.1
+tenacity==8.5.0
+toml==0.10.2
+tornado==6.5.2
+tqdm==4.67.1
+typing-extensions==4.14.1
+typing-inspection==0.4.1
+tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.35.0
+websockets==15.0.1
